--- a/views/netflix_plans.html
+++ b/views/netflix_plans.html
@@ -110,8 +110,8 @@
     <!--======== END: Footer Container========-->
 
 
-    <!-- SCROLL REVEAL JS-->
-    <script src="./assets/js/scrollreveal.min.js"></script>
+    <!-- SCROLL REVEAL JS
+    <script src="./assets/js/scrollreveal.min.js"></script>-->
     <!-- SWIPER JS -->
     <script src="./assets/js/swiper-bundle.min.js"></script>
     <!-- MAIN JS-->
