--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,6 +113,9 @@ h1, h2, h3 {
   color: var(--black-color);
 }
 
+.text-color-white{
+  color: var(--white-color);
+}
 
 .txt-first-color{
   color: var(--first-color);
@@ -433,36 +436,61 @@ input {
   background: none;
 }
 
-/*=============== PLANS ===============*/
-.plan__card,
-.plan__img{
+/*=============== PLATFORMS ===============*/
+.platform__card,
+.platform__img{
   width: 280px;
 }
-.plan__container{
+.platform__container_streaming{
   grid-template-columns: repeat(1, max-content);
+  justify-items: center;
   justify-content: center;
-  gap: 3rem ;
+  gap: 2rem ;
+  margin-top: var(--mb-2);
+  margin-bottom: var(--mb-2);
 }
 
-.plan__img{
-  margin: 3.2em 0 1.2em 0;
-  object-fit: fill;
+.platform__container_musica{
+  grid-template-columns: repeat(1, max-content);
+  justify-items: center;
+  justify-content: center;
+  gap: 2rem ;
+  margin-top: var(--mb-2);
+  margin-bottom: var(--mb-2);
 }
 
-.plan__card{
+.platform__container_tv{
+  grid-template-columns: repeat(1, max-content);
+  justify-items: center;
+  justify-content: center;
+  gap: 2rem ;
+  margin-top: var(--mb-2);
+  margin-bottom: var(--mb-2);
+}
+
+.platform__card{
   text-align: center;
-  box-shadow: .1em .1em 1em 5px rgba(0, 0, 0, 0.4);
+  box-shadow: .1em .1em .5em .1em rgba(0, 0, 0, 0.4);
   border-radius: 1em;
   padding: 1.5em;
 }
 
-.plan__description{
+.platform__img{
+  margin: 3.2em 0 1.2em 0;
+  object-fit: fill;
+  transition: var(--img-transition);
+}
+
+.platform__card > .platform__img:hover{
+  transition: var(--img-scale);
+}
+.platform__description{
   text-align: justify;
   padding: .5em;
   margin-bottom: 1em;
 }
 
-.plan__button{
+.platform__button{
   width: 100%;
   padding: 1em;
   border-radius: .5em;
@@ -472,11 +500,142 @@ input {
 }
 
 
-.plan__button:hover{
+.platform__button:hover{
   transition: all .5s ease-in-out;
   background-color: var(--first-color-alt);
   color: rgb(148, 145, 145);
 }
+
+
+.platform__modal{
+ position: fixed;
+ z-index: 100;
+ left: 0;
+ top: 0;
+ width: 100%;
+ height: 100%;
+ overflow: auto;
+ margin: 0 auto 0 auto;
+ background-color: rgba(0,0,0,.5);
+}
+
+.display_block{
+  display: block;
+}
+
+.display_none{
+  display: none;
+}
+
+.platform__modal_content{
+  background-color: var(--white-color);
+  margin: auto auto;
+  padding: 20px;
+  width: 300px;
+  animation:  modalOpen;
+  animation-duration: .3s;
+}
+
+@keyframes  modalOpen{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
+.closeBtn{
+  color: #ccc;
+  float: right;
+  font-size: 40px;
+  font-weight: 500;
+  transition: .3s;
+}
+.closeBtn:hover,
+.closeBtn:focus{
+  color: var(--black-color);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.platform__modal_header{
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.platform_plan_img{
+  width: 260px;
+}
+.platform__modal_body{
+  grid-template-columns: repeat(1, max-content);
+  justify-items: center;
+  justify-content: center;
+  gap: 2rem ;
+  margin-top: var(--mb-2);
+  margin-bottom: var(--mb-2);
+  text-align: center;
+}
+
+.platform_plan{
+  width: 250px;
+  border: 1px solid black;
+  border-radius: 1em;
+}
+
+.platform_plan_title{
+  border-radius: .7em .7em 0 0;
+  padding: 1em;
+  background-color: var(--black-color);
+  font-weight: bold;
+}
+
+.platform_data_price{
+  margin: .5em 0 0 0;
+  text-align: center;
+  font-size: 55px;
+  font-weight: bolder;
+  color: var(--first-color);
+}
+
+.platform_data_price > span{
+  font-size: 20px;
+  margin-right: .3em;
+  font-weight: 600;
+ 
+}
+.platform_data_details{
+  margin: 2em 3em;
+  text-align: left;
+  font-size: var(--normal-font-size);
+  color: var(--black-color);
+}
+.data_detail{
+  margin: .5em 0 .5em 0;
+  text-align: left;
+  font-size: var(--normal-font-size);
+  color: var(--black-color);
+}
+
+.platform__modal_footer{
+  border: 3px dashed var(--first-color);
+  text-align: center;
+  border-radius: 1em;
+  color: var(--first-color);
+  padding: .5em;
+}
+
+.platform__modal_footer_instruction{
+  font-size: 25px;
+}
+
+.netflix_button{
+  margin-top: 40px;
+}
+.hbo_button{
+  margin-top: 65px;
+}
+
 
 #hbo_max{
   margin: 4em 0 2.6em 0;
@@ -495,7 +654,7 @@ input {
 }
 
 #spotify{
-  margin: 3.2em 0 1.4em 0;
+  margin: 3.2em 0 2em 0;
 }
 
 #ultra_play{
@@ -512,6 +671,10 @@ input {
 
 #mov_play{
   margin: 1.8em 0 2em 0;
+}
+
+#tidal_hifi{
+  margin: 1.2em 0 1.2em 0;
 }
 
 
