--- a/assets/css/mediaquerys.css
+++ b/assets/css/mediaquerys.css
@@ -6,7 +6,9 @@
       transition: all .5s ease-in-out;
       padding: 2.5rem 0 2rem;
     }
-
+    .section__title {
+      margin: 0 2em 2.5em 2em;
+    }
     .home__info {
       width: 190px;
       padding: 1rem;
